Update GA tag template

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
 	{% if site.data.settings.advanced_settings.analytics_code %}
 	<!-- Analytics Code -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-CSPP4756F8"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.data.settings.advanced_settings.analytics_code }}"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
